[package]
authors = ["Pirh <***redacted.email@redacted.nope***>"]
name = "doq"
version = "0.1.1"
description = "A tool for tracking tasks which need done regularly."
homepage = "https://github.com/Pirh/doq"
repository = "https://github.com/Pirh/doq"
readme = "README.md"
license = "WTFPL"

[dependencies]
ansi_term = "~0.10.2"
chrono = "~0.4.0"
clap = "~2.29.1"
serde = "~1.0.27"
serde_derive = "~1.0.27"
serde_yaml = "~0.7.3"

[dependencies.close_enough]
default-features = false
version = "~0.2.1"

